add GetMultipleGroupsUseCaseTest
